--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +13,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mysql2": "^3.6.5",
+    "nodemon": "^3.0.2",
     "sequelize": "^6.33.0"
   }
 }
